# pyavd-cli

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-to-pypi.yml
pyavd-cli/: build.py
pyavd_cli/: __init__.py  build.py
tests/data/fabric-with-global-vars/: .gitignore  Makefile  ansible.cfg  pyproject.toml  requirements.txt
tests/data/fabric-with-global-vars/global_vars/: common.yml  users.yml
tests/data/fabric-with-global-vars/inventory/: inventory.yml
tests/data/fabric-with-global-vars/inventory/group_vars/: FABRIC.yml
tests/data/fabric-with-global-vars/playbooks/: build.yml
tests/data/single-dc-l3ls-fabric/: .gitignore  ansible.cfg  inventory.yml
tests/data/single-dc-l3ls-fabric/documentation/: index.md
tests/data/single-dc-l3ls-fabric/group_vars/: DC1.yml  FABRIC.yml
tests/data/single-dc-l3ls-fabric/intended-golden-5.0.0/structured_configs/: dc1-leaf1a.yml  dc1-leaf2a.yml  dc1-leaf2b.yml
tests/data/single-dc-l3ls-fabric/intended-golden-5.1.0/structured_configs/: dc1-leaf1b.yml  dc1-leaf1c.yml  dc1-leaf2c.yml
tests/data/single-dc-l3ls-fabric/intended-golden-5.2.3/structured_configs/: dc1-spine1.yml
tests/data/single-dc-l3ls-fabric/intended-golden-5.3.0-dev4/structured_configs/: dc1-leaf2b.yml
tests/data/single-dc-l3ls-fabric/intended-golden-5.3.0/configs/: dc1-leaf1a.cfg  dc1-leaf1b.cfg  dc1-leaf2b.cfg
tests/data/single-dc-l3ls-fabric/intended-golden-5.3.0/structured_configs/: dc1-leaf1a.yml  dc1-leaf1b.yml  dc1-leaf1c.yml  dc1-leaf2a.yml  dc1-leaf2c.yml  dc1-spine2.yml
tests/data/single-dc-l3ls-fabric/intended-golden-5.7.2/configs/: dc1-leaf2a.cfg
tests/data/single-dc-l3ls-fabric/intended-golden-5.7.2/structured_configs/: dc1-leaf1a.yml  dc1-leaf1b.yml  dc1-leaf1c.yml  dc1-leaf2a.yml  dc1-leaf2b.yml  dc1-leaf2c.yml  dc1-spine1.yml  dc1-spine2.yml
tests/data/single-dc-l3ls-fabric/playbooks/: deploy-cvp.yml  upload-cvp.yml
